# nikos-rule34-wrapper

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/rule34/: __init__.py  __init__.pyi  __main__.py  client.py  client.pyi  posts.py  posts.pyi
tests/: test_client.py
