[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nikos-rule34-wrapper"
version = "1.0.0"
description = "A Python wrapper for the rule34.xxx API"
authors = [
    {name = "Niko"}
]
dependencies = [
    "requests",
    "httpx",
    "python-dotenv",
    "pydantic",
    "python-magic",
    "beautifulsoup4",
    "lxml",
    "platformdirs",
]
license = {text = "Unlicense"}
readme = "README.md"

[tool.setuptools.packages.find]
where = ["src"]